added my resume

--- a/PersonalSite/Views/Home/Contact.cshtml
+++ b/PersonalSite/Views/Home/Contact.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PersonalSite.Models.ContactViewModel
 
 @{
-    ViewData["Title"] = "Title";
+    ViewData["Title"] = "Contact";
 }
 
 @* <!-- Contact Start -->
