added a project and touched up contact page

--- a/PersonalSite/Views/Home/Classmates.cshtml
+++ b/PersonalSite/Views/Home/Classmates.cshtml
@@ -6,7 +6,7 @@
     <div class="text-center mt-2 pt-5">
         <h1>About the Class</h1>
         <p class="aboutClass">
-            The class started on August 28, 2023. Throughout the course we have learned HTML, CSS, Bootstrap, JavaSript, C#, JQuery, and SQL. We will continue to master these languges to better ourselves as Developers
+            The class started on August 28, 2023. Throughout the course we have learned HTML, CSS, Bootstrap, JavaSript, C#, JQuery, and SQL. We will continue to master these languges to better ourselves as developers
         </p>
     </div>
 </div>
@@ -33,7 +33,7 @@
             <div class="card-body">
                 <h5 class="card-title">Mary Kate Baldwin</h5>
                 <p class="card-text"></p>
-                <a href="https://www.linkedin.com/in/mary-kate-b-940ba4195/" target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/kate-baldwin-940ba4195/" target="_blank">LinkedIn</a>
             </div>
         </div>
     </div>
