--- a/PersonalSite/Views/Home/Index.cshtml
+++ b/PersonalSite/Views/Home/Index.cshtml
@@ -28,8 +28,10 @@
                                 <i class="fa fa-envelope-open text-white"></i>
                             </div>
                             <div class="ms-3">
-                                <p class="mb-2">Email Me</p>
-                                <h5 class="mb-0">benwyattg@gmail.com</h5>
+                                <p class="mb-2">Contact Me</p>
+                                <h5>
+                                    <a asp-action="Contact" class="mb-0">Contact Me</a>
+                                </h5>
                             </div>
                         </div>
                     </div>
@@ -41,7 +43,7 @@
                             <div class="ms-3">
                                 <p class="mb-2">LinkedIn</p>
                                 <h5 class="mb-0">
-                                    <a href="https://www.linkedin.com/in/benjamin-grochowsky-501542295/" class="mb-0">LinkedIn</a>
+                                    <a href="https://www.linkedin.com/in/benjamin-grochowsky-501542295/" class="mb-0" target="_blank">LinkedIn</a>
                                 </h5>
                             </div>
                         </div>
