--- a/PersonalSite/Views/Home/Projects.cshtml
+++ b/PersonalSite/Views/Home/Projects.cshtml
@@ -18,5 +18,15 @@
             <a href="https://github.com/Ben-Grochowsky/DungeonApplication" class="btn btn-primary" target="_blank">CHECK OUT THE CODE</a>
         </div>
     </div>
+    <div class="card center projectCard" style="width: 100%;">
+        <img src="~/img/atomic.png" />
+        <div class="card-body text-center">
+            <h3 class="card-title">Class Project</h3>
+            <p class="card-text">
+                This website was made as a collaboration project with everyone in my class. When anyone first opens up the site they are immediately met with a login window. If you don't have an account for this site you will not be able to access the website. If you login as an Admin you are able to access every page of the website. You can also see what pages Human Resources and Accounting can see
+            </p>
+            <a href="https://github.com/CentriqFullStackHack/DVPRO_08-28_DAY" class="btn btn-primary" target="_blank">CHECK OUT THE CODE</a>
+        </div>
+    </div>
 </div>
 <!-- Project End -->
