--- a/PersonalSite/Views/Shared/_Layout.cshtml
+++ b/PersonalSite/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Benjamin Grochowsky Personal Site</title>
+    <title>Benjamin Grochowsky Personal Site | @ViewData["Title"]</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -52,8 +52,8 @@
             <div class="col-lg-6 ps-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center text-white">
                     <span>Follow Me:</span>
-                    <a class="btn btn-link text-light" href="https://www.linkedin.com/in/benjamin-grochowsky-501542295/"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-link text-light" href="https://github.com/Ben-Grochowsky"><i class="fab fa-github"></i></a>
+                    <a class="btn btn-link text-light" href="https://www.linkedin.com/in/benjamin-grochowsky-501542295/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-link text-light" href="https://github.com/Ben-Grochowsky" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </div>
@@ -63,7 +63,7 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-0 pe-5">
-        <a href="index.html" class="navbar-brand ps-5 me-0">
+        <a asp-action="Index" asp-controller="Home" class="navbar-brand ps-5 me-0">
             <h1 class="text-white m-0">Benjamin Grochowsky</h1>
         </a>
         <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -85,7 +85,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white animated slideInRight">Home</h1>
+            <h1 class="display-3 text-white animated slideInRight">@ViewData["Title"]</h1>
         </div>
     </div>
     <!-- Page Header End -->
@@ -102,7 +102,7 @@
             <div class="row g-5">
                 <div class="row-lg-3 row-md-6 text-center">
                     <h2 class="text-white mb-4">Quick Links</h2>
-                    <a class="btn btn-link text-center" href="contact.html">Contact Me</a>
+                    <a class="btn btn-link text-center" asp-action="Contact" asp-controller="Home">Contact Me</a>
                     <a class="btn btn-link text-center" asp-action="Projects" asp-controller="Home">Projects</a>
                     <a class="btn btn-link text-center" asp-action="Classmates" asp-controller="Home">Classmates</a>
                 </div>
